--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
   
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3391566-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BLHJDMZQQP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-3391566-1');
+  gtag('config', 'G-BLHJDMZQQP');
 </script>
   
 
